--- a/src/app/components/Sidebar.scss
+++ b/src/app/components/Sidebar.scss
@@ -5,21 +5,91 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: #5C0000;
   overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-  .toggle-menu {
-    height: 50px;
-    width: 50px;
-    border-top-right-radius: 10rem;
-    border-bottom-right-radius: 10rem;
-    top: 0;
-    position: absolute;
-    outline: none;
-    z-index: 1;
-    background-color: rgba(64, 194, 133, 0.693);
-    border-color: rgba(64, 194, 133, 0.693);
-    border-left: 0;
+  font-size: 20px;
+  color: white;
+  .container {
+    padding: 20px 0 0 15px;
+  }
+  .title {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  .box-wrapper {
+    display: flex;
+    align-items: center;
+    .search-input {
+      position: relative;
+      font-size: 16px;
+    }
+    i {
+      position: relative;
+      left: -22px;
+      color: #5c0000;
+    }
+    .box {
+      width: 20px;
+      height: 20px;
+      margin-right: 7px;
+    }
+  }
+}
+
+@media (max-width: 1280px) {
+  .side-bar {
+    font-size: 17px;
+    .container {
+      padding-left: 7px;
+    }
+    .box-wrapper {
+      .box {
+        width: 18px;
+        height: 18px;
+        margin-right: 7px;
+      }
+      .search-input {
+        font-size: 13px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .side-bar {
+    font-size: 15px;
+    .container {
+      padding-left: 5px;
+    }
+    .box-wrapper {
+      .box {
+        width: 16px;
+        height: 16px;
+        margin-right: 7px;
+      }
+      .search-input {
+        font-size: 12px;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .side-bar {
+    font-size: 13px;
+    .container {
+      padding-left: 3px;
+    }
+    .box-wrapper {
+      .box {
+        width: 14px;
+        height: 14px;
+        margin-right: 2px;
+      }
+      .search-input {
+        font-size: 10px;
+      }
+    }
   }
 }
