--- a/src/app/components/Sidebar.scss
+++ b/src/app/components/Sidebar.scss
@@ -23,6 +23,7 @@
     .search-input {
       position: relative;
       font-size: 16px;
+      max-width: 230px;
     }
     i {
       position: relative;
@@ -34,6 +35,10 @@
       height: 20px;
       margin-right: 7px;
     }
+    .box-label {
+      font-size: 20px;
+      overflow: hidden;
+    }
   }
 }
 
@@ -42,15 +47,19 @@
     font-size: 17px;
     .container {
       padding-left: 7px;
-    }
+    } 
     .box-wrapper {
       .box {
-        width: 18px;
+        width: 16px;
         height: 18px;
-        margin-right: 7px;
+        margin-right: 5px;
+      }
+      .box-label {
+        font-size: 16px;
       }
       .search-input {
-        font-size: 13px;
+        font-size: 15px;
+        max-width: 170px;
       }
     }
   }
@@ -66,10 +75,33 @@
       .box {
         width: 16px;
         height: 16px;
-        margin-right: 7px;
+        margin-right: 4px;
+      }
+      .box-label {
+        font-size: 16px;
+      }
+      .search-input {
+        font-size: 14px;
+        max-width: 130px;
+      }
+    }
+  }
+}
+
+@media (max-width: 960px) {
+  .side-bar {
+    .box-wrapper {
+      .box {
+        width: 13px;
+        height: 13px;
+        margin-right: 4px;
+      }
+      .box-label {
+        font-size: 13px;
       }
       .search-input {
         font-size: 12px;
+        max-width: 100px;
       }
     }
   }
@@ -83,12 +115,41 @@
     }
     .box-wrapper {
       .box {
-        width: 14px;
-        height: 14px;
+        width: 11px;
+        height: 11px;
         margin-right: 2px;
       }
+      .box-label {
+        font-size: 11px;
+      }
       .search-input {
-        font-size: 10px;
+        font-size: 12px;
+        max-width: 100px;
+      }
+    }
+  }
+}
+
+
+@media only screen and (max-device-width : 640px) {
+  /* Styles */
+  .side-bar {
+    font-size: 13px;
+    .container {
+      padding-left: 3px;
+    }
+    .title {
+      margin-bottom: 5px;
+    }
+    .box-wrapper {
+      .search-input {
+        font-size: 12px;
+        max-width: 93px;
+      }
+      .box {
+        width: 15px;
+        height: 15px;
+        margin-right: 2px;
       }
     }
   }
